Feat: implement data interface and drag and drop basic method
TODO:
- determine the drop event is valid or not

--- a/src/pages/Game/main.css
+++ b/src/pages/Game/main.css
@@ -21,6 +21,10 @@
   justify-content: flex-end;
 }
 
+.cell-wrapper > .card-group > .card:not(:first-child) {
+  margin-top: -173px !important;
+}
+
 [class*='foundation-box-'] {
   position: relative;
 }
